--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - chmod +x run-tests.sh
 
 script:
-  - dotnet sonarscanner begin /k:"Core:Money" /d:sonar.login="$SONAR_TOKEN_DMONEY" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.exclusions="**/bin/**/*,**/obj/**/*" || true
+  - dotnet sonarscanner begin /k:"dibley1973_Money" /d:sonar.login="$SONAR_TOKEN_DMONEY" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.exclusions="**/bin/**/*,**/obj/**/*" || true
   - ./build.sh
   - ./run-tests.sh
   - dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN_DMONEY" || true
